[Refact] Seperate lobby logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ add_subdirectory(core/source/game_rule)
 add_subdirectory(core/source/tetromino)
 add_subdirectory(core/source/util)
 add_subdirectory(core/source/engine)
-add_subdirectory(core/source/ip_resolver)
+add_subdirectory(lobby/source)
 add_subdirectory(menu/source)
 add_subdirectory(setting/source)
 
@@ -61,9 +61,9 @@ elseif (WIN32)
         add_subdirectory(platform/window/source/input)
         add_subdirectory(platform/window/source/render)
         add_subdirectory(platform/window/source/network)
-        add_subdirectory(platform/window/source/ip_resolver_network)
-        add_subdirectory(platform/window/source/ip_resolver_renderer)
-        add_subdirectory(platform/window/source/ip_resolver_input_handler)
+        add_subdirectory(platform/window/source/lobby_network)
+        add_subdirectory(platform/window/source/lobby_renderer)
+        add_subdirectory(platform/window/source/lobby_input_handler)
         add_subdirectory(platform/window/source/util)
         add_subdirectory(platform/window/source/main)
         #터미널 구조에 맞게 수정했습니다. 
