--- a/core/source/engine/CMakeLists.txt
+++ b/core/source/engine/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_library(engine engine.cpp solo_engine.cpp multi_engine.cpp)
 
 target_include_directories(engine 
-	PUBLIC ${PROJECT_SOURCE_DIR}/api	
+	PUBLIC ${PROJECT_SOURCE_DIR}/core/api	
 	PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+	PUBLIC ${PROJECT_SOURCE_DIR}/lobby/api	
+	PUBLIC ${PROJECT_SOURCE_DIR}/lobby/include
 	PUBLIC ${PROJECT_SOURCE_DIR}/setting/include
 )
 
