--- a/core/source/game_rule/CMakeLists.txt
+++ b/core/source/game_rule/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(game_rule rule.cpp rule_zen.cpp rule_blitz.cpp rule_forty_lines.cpp 
 
 target_include_directories(game_rule 
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
-    PUBLIC ${PROJECT_SOURCE_DIR}/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/api
 )
 
 set_target_properties(game_rule PROPERTIES CXX_STANDARD 17)
