--- a/setting/source/CMakeLists.txt
+++ b/setting/source/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(setting
  )
 
 target_include_directories(setting 
-    PUBLIC ${PROJECT_SOURCE_DIR}/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/api
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/menu/api
     PUBLIC ${PROJECT_SOURCE_DIR}/menu/include
