--- a/platform/linux/source/render/CMakeLists.txt
+++ b/platform/linux/source/render/CMakeLists.txt
@@ -1,7 +1,19 @@
-add_library(render linux_render.cpp)
+file(GLOB ALL_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+)
 
-target_include_directories(render 
-    PUBLIC ${PROJECT_SOURCE_DIR}/api
+add_library(linux_render 
+    ${ALL_SOURCES}
+)
+
+target_include_directories(linux_render
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/api
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/menu/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/menu/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/setting/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/setting/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
